# Navora

./: .gitignore  INSTALL_USD.md  README.md  VIEW_IN_BLENDER.md  index.html  package-lock.json  package.json  requirements.txt  test_sim_only.py
.github/workflows/: ci.yml
consumers/debug-visualizer/: index.html  package.json  vite.config.js
consumers/debug-visualizer/src/: App.jsx  index.css
consumers/omniverse-connector/: CMakeLists.txt  README.md  connector.cpp
docs/: BUILD.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  OMNIVERSE_INTEGRATION_SUMMARY.md  architecture.md  omniverse-integration.md  runbook.md
examples/: moving_cube.py  moving_cube_simple.py
frontend/debug_ui/: app.py
frontend/debug_ui/templates/: index.html
infra/docker/: Dockerfile.coordinator  Dockerfile.gateway  Dockerfile.grpc-web-proxy  Dockerfile.visualizer  docker-compose.yml
infra/k8s/: coordinator.yaml  gateway.yaml  visualizer.yaml
sim/: engine.py  entities.py  physics.py
sim-core/: CMakeLists.txt  main.cpp  simulator.cpp  simulator.h
sim-core/physics/: integrator.cpp  integrator.h  rigid_body.h
sim-core/scene/: scene_graph.cpp  scene_graph.h  usd_scene.cpp  usd_scene.h
sim-core/usd/: usd_export.cpp  usd_export.h  usd_file_export.cpp  usd_file_export.h
sim-services/coordinator/: CMakeLists.txt  coordinator.cpp
sim-services/gateway/: gateway.js  package.json  sim.proto
src/: App.jsx  index.css  main.jsx
src/Layouts/: RootLayout.jsx
src/Pages/: Chat.jsx  CheckIn.jsx  HomePage.jsx  LoginInPage.jsx  SignInPage.jsx
src/components/: ChatBot.jsx  HeroSection.jsx  MobileNav.jsx  NavBar.jsx
src/components/CheckIn/: Appointments.jsx  Insurance.jsx  Questions.jsx  Records.jsx  Stepper.jsx
tools/python/controllers/: controller.py
tools/python/orchestration/: start_sim.py
usd/: schemas.py  stage.py  writer.py
